@@ -43,6 +43,31 @@
 #include <lustre_net.h>
 #include <libcfs/list.h>
 
+#define  LLOG_CLIENT_ENTRY(ctxt, imp) do {                            \
+        mutex_down(&ctxt->loc_sem);                                   \
+        if (ctxt->loc_imp) {                                          \
+                imp = class_import_get(ctxt->loc_imp);                \
+        } else {                                                      \
+                CERROR("ctxt->loc_imp == NULL for context idx %d."    \
+                       "Unable to complete MDS/OSS recovery,"         \
+                       "but I'll try again next time.  Not fatal.\n", \
+                       ctxt->loc_idx);                                \
+                imp = NULL;                                           \
+                mutex_up(&ctxt->loc_sem);                             \
+                return (-EINVAL);                                     \
+        }                                                             \
+        mutex_up(&ctxt->loc_sem);                                     \
+} while(0)
+
+#define  LLOG_CLIENT_EXIT(ctxt, imp) do {                  \
+        mutex_down(&ctxt->loc_sem);                        \
+        if (ctxt->loc_imp != imp)                          \
+                CWARN("loc_imp has changed from %p to %p", \
+                       ctxt->loc_imp, imp);                \
+        class_import_put(imp);                             \
+        mutex_up(&ctxt->loc_sem);                          \
+} while(0)
+
 /* This is a callback from the llog_* functions.
  * Assumes caller has already pushed us into the kernel context. */
 static int llog_client_create(struct llog_ctxt *ctxt, struct llog_handle **res,
@@ -55,14 +80,7 @@ static int llog_client_create(struct llog_ctxt *ctxt, struct llog_handle **res,
         int                    rc;
         ENTRY;
 
-        if (ctxt->loc_imp == NULL) {
-                /* This used to be an assert; bug 6200 */
-                CERROR("ctxt->loc_imp == NULL for context idx %d.  Unable to "
-                       "complete MDS/OSS recovery, but I'll try again next "
-                       "time.  Not fatal.\n", ctxt->loc_idx);
-                RETURN(-EINVAL);
-        }
-        imp = ctxt->loc_imp;
+        LLOG_CLIENT_ENTRY(ctxt, imp);
 
         handle = llog_alloc_handle();
         if (handle == NULL)
@@ -110,6 +128,7 @@ static int llog_client_create(struct llog_ctxt *ctxt, struct llog_handle **res,
         handle->lgh_ctxt = ctxt;
         EXIT;
 out:
+        LLOG_CLIENT_EXIT(ctxt, imp);
         ptlrpc_req_finished(req);
         return rc;
 err_free:
@@ -119,17 +138,18 @@ err_free:
 
 static int llog_client_destroy(struct llog_handle *loghandle)
 {
+        struct obd_import     *imp;
         struct ptlrpc_request *req = NULL;
         struct llogd_body     *body;
         int                    rc;
         ENTRY;
 
-        req = ptlrpc_request_alloc_pack(loghandle->lgh_ctxt->loc_imp,
-                                        &RQF_LLOG_ORIGIN_HANDLE_DESTROY,
+        LLOG_CLIENT_ENTRY(loghandle->lgh_ctxt, imp);
+        req = ptlrpc_request_alloc_pack(imp, &RQF_LLOG_ORIGIN_HANDLE_DESTROY,
                                         LUSTRE_LOG_VERSION,
                                         LLOG_ORIGIN_HANDLE_DESTROY);
         if (req == NULL)
-                RETURN(-ENOMEM);
+                GOTO(err_exit, rc =-ENOMEM);
 
         body = req_capsule_client_get(&req->rq_pill, &RMF_LLOGD_BODY);
         body->lgd_logid = loghandle->lgh_id;
@@ -139,6 +159,8 @@ static int llog_client_destroy(struct llog_handle *loghandle)
         rc = ptlrpc_queue_wait(req);
         
         ptlrpc_req_finished(req);
+err_exit:
+        LLOG_CLIENT_EXIT(loghandle->lgh_ctxt, imp);
         RETURN(rc);
 }
 
@@ -147,19 +169,20 @@ static int llog_client_next_block(struct llog_handle *loghandle,
                                   int *cur_idx, int next_idx,
                                   __u64 *cur_offset, void *buf, int len)
 {
+        struct obd_import     *imp;
         struct ptlrpc_request *req = NULL;
         struct llogd_body     *body;
         void                  *ptr;
         int                    rc;
         ENTRY;
 
-        req = ptlrpc_request_alloc_pack(loghandle->lgh_ctxt->loc_imp,
-                                        &RQF_LLOG_ORIGIN_HANDLE_NEXT_BLOCK,
+        LLOG_CLIENT_ENTRY(loghandle->lgh_ctxt, imp);
+        req = ptlrpc_request_alloc_pack(imp, &RQF_LLOG_ORIGIN_HANDLE_NEXT_BLOCK,
                                         LUSTRE_LOG_VERSION,
                                         LLOG_ORIGIN_HANDLE_NEXT_BLOCK);
         if (req == NULL)
-                RETURN(-ENOMEM);
-
+                GOTO(err_exit, rc =-ENOMEM);
+                
         body = req_capsule_client_get(&req->rq_pill, &RMF_LLOGD_BODY);
         body->lgd_logid = loghandle->lgh_id;
         body->lgd_ctxt_idx = loghandle->lgh_ctxt->loc_idx - 1;
@@ -191,24 +214,27 @@ static int llog_client_next_block(struct llog_handle *loghandle,
         EXIT;
 out:
         ptlrpc_req_finished(req);
+err_exit:
+        LLOG_CLIENT_EXIT(loghandle->lgh_ctxt, imp);
         return rc;
 }
 
 static int llog_client_prev_block(struct llog_handle *loghandle,
                                   int prev_idx, void *buf, int len)
 {
+        struct obd_import     *imp;
         struct ptlrpc_request *req = NULL;
         struct llogd_body     *body;
         void                  *ptr;
         int                    rc;
         ENTRY;
 
-        req = ptlrpc_request_alloc_pack(loghandle->lgh_ctxt->loc_imp,
-                                        &RQF_LLOG_ORIGIN_HANDLE_PREV_BLOCK,
+        LLOG_CLIENT_ENTRY(loghandle->lgh_ctxt, imp);
+        req = ptlrpc_request_alloc_pack(imp, &RQF_LLOG_ORIGIN_HANDLE_PREV_BLOCK,
                                         LUSTRE_LOG_VERSION,
                                         LLOG_ORIGIN_HANDLE_PREV_BLOCK);
         if (req == NULL)
-                RETURN(-ENOMEM);
+                GOTO(err_exit, rc = -ENOMEM);
 
         body = req_capsule_client_get(&req->rq_pill, &RMF_LLOGD_BODY);
         body->lgd_logid = loghandle->lgh_id;
@@ -236,11 +262,14 @@ static int llog_client_prev_block(struct llog_handle *loghandle,
         EXIT;
 out:
         ptlrpc_req_finished(req);
+err_exit:
+        LLOG_CLIENT_EXIT(loghandle->lgh_ctxt, imp);
         return rc;
 }
 
 static int llog_client_read_header(struct llog_handle *handle)
 {
+        struct obd_import     *imp;
         struct ptlrpc_request *req = NULL;
         struct llogd_body     *body;
         struct llog_log_hdr   *hdr;
@@ -248,12 +277,12 @@ static int llog_client_read_header(struct llog_handle *handle)
         int                    rc;
         ENTRY;
 
-        req = ptlrpc_request_alloc_pack(handle->lgh_ctxt->loc_imp,
-                                        &RQF_LLOG_ORIGIN_HANDLE_READ_HEADER,
+        LLOG_CLIENT_ENTRY(handle->lgh_ctxt, imp);
+        req = ptlrpc_request_alloc_pack(imp,&RQF_LLOG_ORIGIN_HANDLE_READ_HEADER,
                                         LUSTRE_LOG_VERSION,
                                         LLOG_ORIGIN_HANDLE_READ_HEADER);
         if (req == NULL)
-                RETURN(-ENOMEM);
+                GOTO(err_exit, rc = -ENOMEM);
 
         body = req_capsule_client_get(&req->rq_pill, &RMF_LLOGD_BODY);
         body->lgd_logid = handle->lgh_id;
@@ -288,6 +317,8 @@ static int llog_client_read_header(struct llog_handle *handle)
         EXIT;
 out:
         ptlrpc_req_finished(req);
+err_exit:
+        LLOG_CLIENT_EXIT(handle->lgh_ctxt, imp);
         return rc;
 }
 
